# python-wordpress-api-jwt

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
src/wpapijwt/: wp_api.py
src/wpapijwt/resources/: functions.py
