[metadata]
name = wordpress-api-jwt
version = 0.0.7
author = Baptiste VANDENBORGHT
author_email = baptiste@twiiky-corp.fr
description = A very simple package to make API calls easily with WordPress using JWT Authentication
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aleaforny/python-wordpress-api-jwt
project_urls =
    Bug Tracker = https://github.com/aleaforny/python-wordpress-api-jwt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
